# python_dockerized

./: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
docker/: build.sh  detect.sh  start.sh
my_module/: __main__.py
